# dtcllm-introduction-to-rag

./: .env.example  LICENSE  README.md  faq.db  homework-01.ipynb  ingest.py  main.py  pyproject.toml  rag_helper.py  rag_helper2.py  sqlite-ingest.ipynb  test-edgar-data.ipynb  test-openai-api.ipynb  test-rag.ipynb  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
.devcontainer/: .env.example  devcontainer.json  docker-compose.yml  post-create.sh
docs/: devcontainer-docker.md  docker-cleanup.md
onnx/: homework-02.ipynb  onnx.ipynb  pyproject.toml
