[project]
name = "dtcllm-introduction-to-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "edgartools>=5.39.1",
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pydantic-ai>=1.107.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]
